--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-body{
-  background-color: #8EC5FC;
-background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-min-height: 100vh;
+body {
+  background-color: #8ec5fc;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+  min-height: 100vh;
 }
